vlib/v/checker/tests/dec_lit_wrong_digit_err.vv
fn main() {
    println(12345qrst+10)
}
